<resources>
    <string name="app_name">hellogrpc</string>
    <string name="pokedex_name">Pokedex</string>

    <string name="enter_host">Enter Host</string>
    <string name="enter_port">Enter Port</string>
    <string name="enter_message_to_send">Enter message to send</string>
    <string name="send_grpc_request">Send Grpc Request</string>
    <string name="response">Response:</string>

    <string name="enter_pokemon_name">Enter Pokemon Name</string>
    <string name="get_pokemon_info">Get Pokemon Info</string>
    <string name="question_mark">\?</string>
</resources>
